<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Sudoku_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/sudoku_title_home"
        android:layout_centerHorizontal="true"
        android:textColor="#5A13D8"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Custom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/Custom"
        android:layout_centerHorizontal="true"
        android:textColor="#AE98D5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Custom_text"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Custom"/>

        <CheckBox
            android:id="@+id/custom_words_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>


    </LinearLayout>

    <TextView
        android:id="@+id/Easy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/easy_level"
        android:layout_centerHorizontal="true"
        android:textColor="#AE98D5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Easy_text"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_by_four"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_by_six"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/medium_level"
        android:layout_centerHorizontal="true"
        android:textColor="#AE98D5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Medium_text"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_by_nine" />

    </LinearLayout>

    <TextView
        android:id="@+id/Hard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/hard_level"
        android:layout_centerHorizontal="true"
        android:textColor="#AE98D5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Hard_text"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_twelve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve_by_twelve" />

    </LinearLayout>

</RelativeLayout>